@@ -3,7 +3,7 @@
 # Yet another raylib wrapper for Ruby #
 
 *   Created : 2021-10-17
-*   Last modified : 2024-02-03
+*   Last modified : 2024-02-18
 
 Provides Ruby bindings for raylib-related libraries including:
 
