@@ -379,6 +379,12 @@
       "description": ""
     },
     {
+      "name": "SUPPORT_FILEFORMAT_BDF",
+      "type": "INT",
+      "value": 1,
+      "description": ""
+    },
+    {
       "name": "SUPPORT_TEXT_MANIPULATION",
       "type": "INT",
       "value": 1,
